// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Button Icon Live Props 1`] = `
<div
  className="css-1tba8mc"
>
  <button
    className="css-1ffqdtb"
    color="default"
    disabled={false}
    onClick={[Function]}
    shape="default"
  >
    <svg>
      home.svg
    </svg>
  </button>
  <button
    className="css-znc00l"
    color="primary"
    disabled={false}
    onClick={[Function]}
    shape="default"
  >
    <svg>
      home.svg
    </svg>
  </button>
  <button
    className="css-l61vml"
    color="secondary"
    disabled={false}
    onClick={[Function]}
    shape="default"
  >
    <svg>
      home.svg
    </svg>
  </button>
  <button
    className="css-19gzs40"
    color="default"
    disabled={false}
    onClick={[Function]}
    shape="rounded"
  >
    <svg>
      calendar.svg
    </svg>
  </button>
  <button
    className="css-1hfry2c"
    color="primary"
    disabled={false}
    onClick={[Function]}
    shape="rounded"
  >
    <svg>
      calendar.svg
    </svg>
  </button>
  <button
    className="css-n73p1u"
    color="secondary"
    disabled={false}
    onClick={[Function]}
    shape="rounded"
  >
    <svg>
      calendar.svg
    </svg>
  </button>
  <button
    className="css-e2mnof"
    color="default"
    disabled={false}
    onClick={[Function]}
    shape="circle"
  >
    <svg>
      dashboard.svg
    </svg>
  </button>
  <button
    className="css-1mbeozy"
    color="primary"
    disabled={false}
    onClick={[Function]}
    shape="circle"
  >
    <svg>
      dashboard.svg
    </svg>
  </button>
  <button
    className="css-1rocw9k"
    color="secondary"
    disabled={false}
    onClick={[Function]}
    shape="circle"
  >
    <svg>
      dashboard.svg
    </svg>
  </button>
  <br />
  <button
    className="css-1sqxww0"
    color="default"
    disabled={false}
    onClick={[Function]}
    shape="default"
  >
    <svg>
      home.svg
    </svg>
  </button>
  <button
    className="css-1bzedvy"
    color="primary"
    disabled={false}
    onClick={[Function]}
    shape="default"
  >
    <svg>
      home.svg
    </svg>
  </button>
  <button
    className="css-1wy5nod"
    color="secondary"
    disabled={false}
    onClick={[Function]}
    shape="default"
  >
    <svg>
      home.svg
    </svg>
  </button>
  <button
    className="css-11q4y9c"
    color="default"
    disabled={false}
    onClick={[Function]}
    shape="rounded"
  >
    <svg>
      calendar.svg
    </svg>
  </button>
  <button
    className="css-ss0t62"
    color="primary"
    disabled={false}
    onClick={[Function]}
    shape="rounded"
  >
    <svg>
      calendar.svg
    </svg>
  </button>
  <button
    className="css-112nepb"
    color="secondary"
    disabled={false}
    onClick={[Function]}
    shape="rounded"
  >
    <svg>
      calendar.svg
    </svg>
  </button>
  <button
    className="css-1j3lglj"
    color="default"
    disabled={false}
    onClick={[Function]}
    shape="circle"
  >
    <svg>
      dashboard.svg
    </svg>
  </button>
  <button
    className="css-1ohmz7c"
    color="primary"
    disabled={false}
    onClick={[Function]}
    shape="circle"
  >
    <svg>
      dashboard.svg
    </svg>
  </button>
  <button
    className="css-1vv6g1n"
    color="secondary"
    disabled={false}
    onClick={[Function]}
    shape="circle"
  >
    <svg>
      dashboard.svg
    </svg>
  </button>
  <br />
  <button
    className="css-1ja97ye"
    color="default"
    disabled={false}
    onClick={[Function]}
    shape="default"
  >
    <svg>
      home.svg
    </svg>
  </button>
  <button
    className="css-sn7hol"
    color="primary"
    disabled={false}
    onClick={[Function]}
    shape="default"
  >
    <svg>
      home.svg
    </svg>
  </button>
  <button
    className="css-1vo18n0"
    color="secondary"
    disabled={false}
    onClick={[Function]}
    shape="default"
  >
    <svg>
      home.svg
    </svg>
  </button>
  <button
    className="css-1ktain8"
    color="default"
    disabled={false}
    onClick={[Function]}
    shape="rounded"
  >
    <svg>
      calendar.svg
    </svg>
  </button>
  <button
    className="css-kfy3nq"
    color="primary"
    disabled={false}
    onClick={[Function]}
    shape="rounded"
  >
    <svg>
      calendar.svg
    </svg>
  </button>
  <button
    className="css-fqv7m5"
    color="secondary"
    disabled={false}
    onClick={[Function]}
    shape="rounded"
  >
    <svg>
      calendar.svg
    </svg>
  </button>
  <button
    className="css-pjsyrg"
    color="default"
    disabled={false}
    onClick={[Function]}
    shape="circle"
  >
    <svg>
      dashboard.svg
    </svg>
  </button>
  <button
    className="css-oske7n"
    color="primary"
    disabled={false}
    onClick={[Function]}
    shape="circle"
  >
    <svg>
      dashboard.svg
    </svg>
  </button>
  <button
    className="css-1j57xwm"
    color="secondary"
    disabled={false}
    onClick={[Function]}
    shape="circle"
  >
    <svg>
      dashboard.svg
    </svg>
  </button>
  <br />
</div>
`;

exports[`Storyshots Button Live Props 1`] = `
<div
  className="css-1tba8mc"
>
  <button
    className="css-153n7r7"
    color="default"
    disabled={false}
    onClick={[Function]}
    shape="default"
  >
    Change my appearance from 
    <strong>
      "Knobs"
    </strong>
     tab
  </button>
</div>
`;

exports[`Storyshots Button.Color Default 1`] = `
<div
  className="css-1tba8mc"
>
  <button
    className="css-153n7r7"
    color="default"
    disabled={false}
    onClick={[Function]}
    shape="default"
  >
    DEFAULT
  </button>
  <button
    className="css-1xw5j27"
    color="default"
    disabled={false}
    onClick={[Function]}
    shape="default"
  >
    OUTLINE
  </button>
  <button
    className="css-1kkgwbg"
    color="default"
    disabled={false}
    onClick={[Function]}
    shape="default"
  >
    TEXT
  </button>
</div>
`;

exports[`Storyshots Button.Color Primary 1`] = `
<div
  className="css-1tba8mc"
>
  <button
    className="css-1lq15mw"
    color="primary"
    disabled={false}
    onClick={[Function]}
    shape="default"
  >
    DEFAULT
  </button>
  <button
    className="css-14o5sa6"
    color="primary"
    disabled={false}
    onClick={[Function]}
    shape="default"
  >
    OUTLINE
  </button>
  <button
    className="css-jcw9dv"
    color="primary"
    disabled={false}
    onClick={[Function]}
    shape="default"
  >
    TEXT
  </button>
</div>
`;

exports[`Storyshots Button.Color Secondary 1`] = `
<div
  className="css-1tba8mc"
>
  <button
    className="css-boshfe"
    color="secondary"
    disabled={false}
    onClick={[Function]}
    shape="default"
  >
    DEFAULT
  </button>
  <button
    className="css-1qzj5ml"
    color="secondary"
    disabled={false}
    onClick={[Function]}
    shape="default"
  >
    OUTLINE
  </button>
  <button
    className="css-15tu6ha"
    color="secondary"
    disabled={false}
    onClick={[Function]}
    shape="default"
  >
    TEXT
  </button>
</div>
`;

exports[`Storyshots Button.Shape Circle 1`] = `
<div
  className="css-1tba8mc"
>
  <button
    className="css-1w51cmx"
    color="default"
    disabled={false}
    onClick={[Function]}
    shape="circle"
  >
    DEFAULT
  </button>
  <button
    className="css-1ovk79p"
    color="primary"
    disabled={false}
    onClick={[Function]}
    shape="circle"
  >
    PRIMARY
  </button>
  <button
    className="css-gq9y2o"
    color="secondary"
    disabled={false}
    onClick={[Function]}
    shape="circle"
  >
    SECONDARY
  </button>
</div>
`;

exports[`Storyshots Button.Shape Default 1`] = `
<div
  className="css-1tba8mc"
>
  <button
    className="css-153n7r7"
    color="default"
    disabled={false}
    onClick={[Function]}
    shape="default"
  >
    DEFAULT
  </button>
  <button
    className="css-1lq15mw"
    color="primary"
    disabled={false}
    onClick={[Function]}
    shape="default"
  >
    PRIMARY
  </button>
  <button
    className="css-boshfe"
    color="secondary"
    disabled={false}
    onClick={[Function]}
    shape="default"
  >
    SECONDARY
  </button>
</div>
`;

exports[`Storyshots Button.Shape Rounded 1`] = `
<div
  className="css-1tba8mc"
>
  <button
    className="css-1omhqi2"
    color="default"
    disabled={false}
    onClick={[Function]}
    shape="rounded"
  >
    DEFAULT
  </button>
  <button
    className="css-vnn5kn"
    color="primary"
    disabled={false}
    onClick={[Function]}
    shape="rounded"
  >
    PRIMARY
  </button>
  <button
    className="css-1jkolc3"
    color="secondary"
    disabled={false}
    onClick={[Function]}
    shape="rounded"
  >
    SECONDARY
  </button>
</div>
`;

exports[`Storyshots Button.State Disabled 1`] = `
<div
  className="css-1tba8mc"
>
  <button
    className="css-153n7r7"
    color="default"
    disabled={true}
    onClick={[Function]}
    shape="default"
  >
    DEFAULT
  </button>
  <button
    className="css-1lq15mw"
    color="primary"
    disabled={true}
    onClick={[Function]}
    shape="default"
  >
    PRIMARY
  </button>
  <button
    className="css-boshfe"
    color="secondary"
    disabled={true}
    onClick={[Function]}
    shape="default"
  >
    SECONDARY
  </button>
  <br />
  <button
    className="css-1xw5j27"
    color="default"
    disabled={true}
    onClick={[Function]}
    shape="default"
  >
    DEFAULT
  </button>
  <button
    className="css-14o5sa6"
    color="primary"
    disabled={true}
    onClick={[Function]}
    shape="default"
  >
    PRIMARY
  </button>
  <button
    className="css-1qzj5ml"
    color="secondary"
    disabled={true}
    onClick={[Function]}
    shape="default"
  >
    SECONDARY
  </button>
  <br />
  <button
    className="css-1kkgwbg"
    color="default"
    disabled={true}
    onClick={[Function]}
    shape="default"
  >
    DEFAULT
  </button>
  <button
    className="css-jcw9dv"
    color="primary"
    disabled={true}
    onClick={[Function]}
    shape="default"
  >
    PRIMARY
  </button>
  <button
    className="css-15tu6ha"
    color="secondary"
    disabled={true}
    onClick={[Function]}
    shape="default"
  >
    SECONDARY
  </button>
  <br />
</div>
`;

exports[`Storyshots Button.State Loading 1`] = `
<div
  className="css-1tba8mc"
>
  <button
    className="css-tz91p6"
    color="default"
    disabled={false}
    shape="default"
  >
    <svg
      className="-loader"
    >
      loader.svg
    </svg>
    DEFAULT
  </button>
  <button
    className="css-1bxn4hu"
    color="primary"
    disabled={false}
    shape="default"
  >
    <svg
      className="-loader"
    >
      loader.svg
    </svg>
    PRIMARY
  </button>
  <button
    className="css-bu6a4x"
    color="secondary"
    disabled={false}
    shape="default"
  >
    <svg
      className="-loader"
    >
      loader.svg
    </svg>
    SECONDARY
  </button>
  <br />
  <button
    className="css-urc6fs"
    color="default"
    disabled={false}
    shape="default"
  >
    <svg
      className="-loader"
    >
      loader.svg
    </svg>
    DEFAULT
  </button>
  <button
    className="css-jurg9a"
    color="primary"
    disabled={false}
    shape="default"
  >
    <svg
      className="-loader"
    >
      loader.svg
    </svg>
    PRIMARY
  </button>
  <button
    className="css-1833d7i"
    color="secondary"
    disabled={false}
    shape="default"
  >
    <svg
      className="-loader"
    >
      loader.svg
    </svg>
    SECONDARY
  </button>
  <br />
  <button
    className="css-1fqvk5w"
    color="default"
    disabled={false}
    shape="default"
  >
    <svg
      className="-loader"
    >
      loader.svg
    </svg>
    DEFAULT
  </button>
  <button
    className="css-1rynzxc"
    color="primary"
    disabled={false}
    shape="default"
  >
    <svg
      className="-loader"
    >
      loader.svg
    </svg>
    PRIMARY
  </button>
  <button
    className="css-1qhv4d2"
    color="secondary"
    disabled={false}
    shape="default"
  >
    <svg
      className="-loader"
    >
      loader.svg
    </svg>
    SECONDARY
  </button>
  <br />
</div>
`;

exports[`Storyshots Button.Variant Default 1`] = `
<div
  className="css-1tba8mc"
>
  <button
    className="css-153n7r7"
    color="default"
    disabled={false}
    onClick={[Function]}
    shape="default"
  >
    DEFAULT
  </button>
  <button
    className="css-1lq15mw"
    color="primary"
    disabled={false}
    onClick={[Function]}
    shape="default"
  >
    PRIMARY
  </button>
  <button
    className="css-boshfe"
    color="secondary"
    disabled={false}
    onClick={[Function]}
    shape="default"
  >
    SECONDARY
  </button>
</div>
`;

exports[`Storyshots Button.Variant Outline 1`] = `
<div
  className="css-1tba8mc"
>
  <button
    className="css-1xw5j27"
    color="default"
    disabled={false}
    onClick={[Function]}
    shape="default"
  >
    DEFAULT
  </button>
  <button
    className="css-14o5sa6"
    color="primary"
    disabled={false}
    onClick={[Function]}
    shape="default"
  >
    PRIMARY
  </button>
  <button
    className="css-1qzj5ml"
    color="secondary"
    disabled={false}
    onClick={[Function]}
    shape="default"
  >
    SECONDARY
  </button>
</div>
`;

exports[`Storyshots Button.Variant Text 1`] = `
<div
  className="css-1tba8mc"
>
  <button
    className="css-1kkgwbg"
    color="default"
    disabled={false}
    onClick={[Function]}
    shape="default"
  >
    DEFAULT
  </button>
  <button
    className="css-jcw9dv"
    color="primary"
    disabled={false}
    onClick={[Function]}
    shape="default"
  >
    PRIMARY
  </button>
  <button
    className="css-15tu6ha"
    color="secondary"
    disabled={false}
    onClick={[Function]}
    shape="default"
  >
    SECONDARY
  </button>
</div>
`;

exports[`Storyshots Checkbox Live Props 1`] = `
<div
  className="css-jyjmas"
>
  <label
    className="css-1tlrdmb"
  >
    <input
      className="css-1rnm75w"
      defaultChecked={false}
      disabled={false}
      onChange={[Function]}
      type="checkbox"
    />
    <i
      className="css-vkuspn"
      color="default"
      shape="default"
    />
    Change my appearance from 
    <strong>
      "Knobs"
    </strong>
     tab
  </label>
</div>
`;

exports[`Storyshots Checkbox.Color Default 1`] = `
<div
  className="css-jyjmas"
>
  <label
    className="css-1tlrdmb"
  >
    <input
      className="css-1rnm75w"
      defaultChecked={true}
      disabled={false}
      onChange={[Function]}
      type="checkbox"
    />
    <i
      className="css-lakhau"
      color="default"
      shape="default"
    />
  </label>
  <label
    className="css-1tlrdmb"
  >
    <input
      className="css-1rnm75w"
      defaultChecked={true}
      disabled={false}
      onChange={[Function]}
      type="checkbox"
    />
    <i
      className="css-1osmtp4"
      color="default"
      shape="rounded"
    />
  </label>
  <label
    className="css-1tlrdmb"
  >
    <input
      className="css-1rnm75w"
      defaultChecked={true}
      disabled={false}
      onChange={[Function]}
      type="checkbox"
    />
    <i
      className="css-uzvdau"
      color="default"
      shape="circle"
    />
  </label>
</div>
`;

exports[`Storyshots Checkbox.Color Primary 1`] = `
<div
  className="css-jyjmas"
>
  <label
    className="css-1tlrdmb"
  >
    <input
      className="css-1rnm75w"
      defaultChecked={true}
      disabled={false}
      onChange={[Function]}
      type="checkbox"
    />
    <i
      className="css-ql7qom"
      color="primary"
      shape="default"
    />
  </label>
  <label
    className="css-1tlrdmb"
  >
    <input
      className="css-1rnm75w"
      defaultChecked={true}
      disabled={false}
      onChange={[Function]}
      type="checkbox"
    />
    <i
      className="css-k1e6jn"
      color="primary"
      shape="rounded"
    />
  </label>
  <label
    className="css-1tlrdmb"
  >
    <input
      className="css-1rnm75w"
      defaultChecked={true}
      disabled={false}
      onChange={[Function]}
      type="checkbox"
    />
    <i
      className="css-1uth76s"
      color="primary"
      shape="circle"
    />
  </label>
</div>
`;

exports[`Storyshots Checkbox.Color Secondary 1`] = `
<div
  className="css-jyjmas"
>
  <label
    className="css-1tlrdmb"
  >
    <input
      className="css-1rnm75w"
      defaultChecked={true}
      disabled={false}
      onChange={[Function]}
      type="checkbox"
    />
    <i
      className="css-1fffyjt"
      color="secondary"
      shape="default"
    />
  </label>
  <label
    className="css-1tlrdmb"
  >
    <input
      className="css-1rnm75w"
      defaultChecked={true}
      disabled={false}
      onChange={[Function]}
      type="checkbox"
    />
    <i
      className="css-1b8vy4g"
      color="secondary"
      shape="rounded"
    />
  </label>
  <label
    className="css-1tlrdmb"
  >
    <input
      className="css-1rnm75w"
      defaultChecked={true}
      disabled={false}
      onChange={[Function]}
      type="checkbox"
    />
    <i
      className="css-zjezc8"
      color="secondary"
      shape="circle"
    />
  </label>
</div>
`;

exports[`Storyshots Checkbox.Shape Circle 1`] = `
<div
  className="css-jyjmas"
>
  <label
    className="css-1tlrdmb"
  >
    <input
      className="css-1rnm75w"
      defaultChecked={true}
      disabled={false}
      onChange={[Function]}
      type="checkbox"
    />
    <i
      className="css-uzvdau"
      color="default"
      shape="circle"
    />
  </label>
  <label
    className="css-1tlrdmb"
  >
    <input
      className="css-1rnm75w"
      defaultChecked={true}
      disabled={false}
      onChange={[Function]}
      type="checkbox"
    />
    <i
      className="css-1uth76s"
      color="primary"
      shape="circle"
    />
  </label>
  <label
    className="css-1tlrdmb"
  >
    <input
      className="css-1rnm75w"
      defaultChecked={true}
      disabled={false}
      onChange={[Function]}
      type="checkbox"
    />
    <i
      className="css-zjezc8"
      color="secondary"
      shape="circle"
    />
  </label>
</div>
`;

exports[`Storyshots Checkbox.Shape Default 1`] = `
<div
  className="css-jyjmas"
>
  <label
    className="css-1tlrdmb"
  >
    <input
      className="css-1rnm75w"
      defaultChecked={true}
      disabled={false}
      onChange={[Function]}
      type="checkbox"
    />
    <i
      className="css-lakhau"
      color="default"
      shape="default"
    />
  </label>
  <label
    className="css-1tlrdmb"
  >
    <input
      className="css-1rnm75w"
      defaultChecked={true}
      disabled={false}
      onChange={[Function]}
      type="checkbox"
    />
    <i
      className="css-ql7qom"
      color="primary"
      shape="default"
    />
  </label>
  <label
    className="css-1tlrdmb"
  >
    <input
      className="css-1rnm75w"
      defaultChecked={true}
      disabled={false}
      onChange={[Function]}
      type="checkbox"
    />
    <i
      className="css-1fffyjt"
      color="secondary"
      shape="default"
    />
  </label>
</div>
`;

exports[`Storyshots Checkbox.Shape Rounded 1`] = `
<div
  className="css-jyjmas"
>
  <label
    className="css-1tlrdmb"
  >
    <input
      className="css-1rnm75w"
      defaultChecked={true}
      disabled={false}
      onChange={[Function]}
      type="checkbox"
    />
    <i
      className="css-1osmtp4"
      color="default"
      shape="rounded"
    />
  </label>
  <label
    className="css-1tlrdmb"
  >
    <input
      className="css-1rnm75w"
      defaultChecked={true}
      disabled={false}
      onChange={[Function]}
      type="checkbox"
    />
    <i
      className="css-k1e6jn"
      color="primary"
      shape="rounded"
    />
  </label>
  <label
    className="css-1tlrdmb"
  >
    <input
      className="css-1rnm75w"
      defaultChecked={true}
      disabled={false}
      onChange={[Function]}
      type="checkbox"
    />
    <i
      className="css-1b8vy4g"
      color="secondary"
      shape="rounded"
    />
  </label>
</div>
`;

exports[`Storyshots Checkbox.State Controlled 1`] = `
<div
  className="css-jyjmas"
>
  <label
    className="css-1tlrdmb"
  >
    <input
      checked={false}
      className="css-1rnm75w"
      defaultChecked={false}
      disabled={false}
      onChange={[Function]}
      type="checkbox"
    />
    <i
      className="css-lakhau"
      color="default"
      shape="default"
    />
  </label>
  <label
    className="css-1tlrdmb"
  >
    <input
      checked={false}
      className="css-1rnm75w"
      defaultChecked={false}
      disabled={false}
      onChange={[Function]}
      type="checkbox"
    />
    <i
      className="css-ql7qom"
      color="primary"
      shape="default"
    />
  </label>
  <label
    className="css-1tlrdmb"
  >
    <input
      checked={false}
      className="css-1rnm75w"
      defaultChecked={false}
      disabled={false}
      onChange={[Function]}
      type="checkbox"
    />
    <i
      className="css-1fffyjt"
      color="secondary"
      shape="default"
    />
  </label>
</div>
`;

exports[`Storyshots Checkbox.State Disabled 1`] = `
<div
  className="css-jyjmas"
>
  <label
    className="css-1tlrdmb"
  >
    <input
      className="css-1rnm75w"
      defaultChecked={false}
      disabled={true}
      onChange={[Function]}
      type="checkbox"
    />
    <i
      className="css-lakhau"
      color="default"
      shape="default"
    />
  </label>
  <label
    className="css-1tlrdmb"
  >
    <input
      className="css-1rnm75w"
      defaultChecked={false}
      disabled={true}
      onChange={[Function]}
      type="checkbox"
    />
    <i
      className="css-ql7qom"
      color="primary"
      shape="default"
    />
  </label>
  <label
    className="css-1tlrdmb"
  >
    <input
      className="css-1rnm75w"
      defaultChecked={false}
      disabled={true}
      onChange={[Function]}
      type="checkbox"
    />
    <i
      className="css-1fffyjt"
      color="secondary"
      shape="default"
    />
  </label>
</div>
`;

exports[`Storyshots Checkbox.State Uncontrolled 1`] = `
<div
  className="css-jyjmas"
>
  <label
    className="css-1tlrdmb"
  >
    <input
      className="css-1rnm75w"
      defaultChecked={true}
      disabled={false}
      onChange={[Function]}
      type="checkbox"
    />
    <i
      className="css-lakhau"
      color="default"
      shape="default"
    />
  </label>
  <label
    className="css-1tlrdmb"
  >
    <input
      className="css-1rnm75w"
      defaultChecked={true}
      disabled={false}
      onChange={[Function]}
      type="checkbox"
    />
    <i
      className="css-ql7qom"
      color="primary"
      shape="default"
    />
  </label>
  <label
    className="css-1tlrdmb"
  >
    <input
      className="css-1rnm75w"
      defaultChecked={true}
      disabled={false}
      onChange={[Function]}
      type="checkbox"
    />
    <i
      className="css-1fffyjt"
      color="secondary"
      shape="default"
    />
  </label>
</div>
`;

exports[`Storyshots Expansion Panel Live Props 1`] = `
<div
  className="css-14973vb"
>
  <header
    className="css-10e4378"
  >
    <button
      className="css-1brpd6t"
      color="default"
      onClick={[Function]}
    >
      <svg
        className="-minus"
      >
        minus.svg
      </svg>
    </button>
    <h2>
      Expansion Title
    </h2>
  </header>
  <section
    className="css-99rzea"
    onTransitionEnd={[Function]}
    style={
      Object {
        "height": 0,
      }
    }
  >
    <div>
      Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
    </div>
  </section>
</div>
`;

exports[`Storyshots Expansion Panel Multi Expansion Panel 1`] = `
<div
  className="css-14973vb"
>
  <header
    className="css-10e4378"
  >
    <button
      className="css-1brpd6t"
      color="default"
      onClick={[Function]}
    >
      <svg
        className="-plus"
      >
        plus.svg
      </svg>
    </button>
    <h2>
      Expansion Title
    </h2>
  </header>
  <section
    className="css-99rzea"
    onTransitionEnd={[Function]}
    style={
      Object {
        "height": 0,
      }
    }
  >
    <div>
      Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
    </div>
  </section>
  <header
    className="css-10e4378"
  >
    <button
      className="css-1brpd6t"
      color="default"
      onClick={[Function]}
    >
      <svg
        className="-minus"
      >
        minus.svg
      </svg>
    </button>
    <h2>
      Expansion Title
    </h2>
  </header>
  <section
    className="css-99rzea"
    onTransitionEnd={[Function]}
    style={
      Object {
        "height": 0,
      }
    }
  >
    <div>
      Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
    </div>
  </section>
  <header
    className="css-10e4378"
  >
    <button
      className="css-1brpd6t"
      color="default"
      onClick={[Function]}
    >
      <svg
        className="-plus"
      >
        plus.svg
      </svg>
    </button>
    <h2>
      Expansion Title
    </h2>
  </header>
  <section
    className="css-99rzea"
    onTransitionEnd={[Function]}
    style={
      Object {
        "height": 0,
      }
    }
  >
    <div>
      Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
    </div>
  </section>
</div>
`;

exports[`Storyshots Radio Live Props 1`] = `
<div
  className="css-jyjmas"
>
  <label
    className="css-1tlrdmb"
  >
    <input
      className="css-1rnm75w"
      disabled={false}
      onChange={[Function]}
      type="radio"
    />
    <i
      className="css-bda6po"
      color="default"
      shape="circle"
    />
    Change my appearance from 
    <strong>
      "Knobs"
    </strong>
     tab
  </label>
</div>
`;

exports[`Storyshots Radio.Color Default 1`] = `
<div
  className="css-jyjmas"
>
  <label
    className="css-1tlrdmb"
  >
    <input
      className="css-1rnm75w"
      disabled={false}
      name="radio"
      onChange={[Function]}
      type="radio"
    />
    <i
      className="css-d26qyx"
      color="default"
      shape="circle"
    />
  </label>
  <label
    className="css-1tlrdmb"
  >
    <input
      className="css-1rnm75w"
      disabled={false}
      name="radio"
      onChange={[Function]}
      type="radio"
    />
    <i
      className="css-1rswhmv"
      color="primary"
      shape="circle"
    />
  </label>
  <label
    className="css-1tlrdmb"
  >
    <input
      className="css-1rnm75w"
      disabled={false}
      name="radio"
      onChange={[Function]}
      type="radio"
    />
    <i
      className="css-1fspf8i"
      color="secondary"
      shape="circle"
    />
  </label>
</div>
`;

exports[`Storyshots Switch Live Props 1`] = `
<div
  className="css-14973vb"
>
  <label
    className="css-1tlrdmb"
  >
    <input
      className="css-1rnm75w"
      defaultChecked={false}
      disabled={false}
      onChange={[Function]}
      type="checkbox"
    />
    <i
      className="css-1fos6kk"
      color="default"
    />
    Change my appearance from 
    <strong>
      "Knobs"
    </strong>
     tab
  </label>
</div>
`;

exports[`Storyshots Switch.State Controlled 1`] = `
<div
  className="css-jyjmas"
>
  <label
    className="css-1tlrdmb"
  >
    <input
      checked={false}
      className="css-1rnm75w"
      defaultChecked={false}
      disabled={false}
      onChange={[Function]}
      type="checkbox"
    />
    <i
      className="css-umqk88"
      color="default"
    />
  </label>
  <label
    className="css-1tlrdmb"
  >
    <input
      checked={false}
      className="css-1rnm75w"
      defaultChecked={false}
      disabled={false}
      onChange={[Function]}
      type="checkbox"
    />
    <i
      className="css-h1wp49"
      color="primary"
    />
  </label>
  <label
    className="css-1tlrdmb"
  >
    <input
      checked={false}
      className="css-1rnm75w"
      defaultChecked={false}
      disabled={false}
      onChange={[Function]}
      type="checkbox"
    />
    <i
      className="css-49iodi"
      color="secondary"
    />
  </label>
</div>
`;

exports[`Storyshots Switch.State Disabled 1`] = `
<div
  className="css-jyjmas"
>
  <label
    className="css-1tlrdmb"
  >
    <input
      className="css-1rnm75w"
      defaultChecked={false}
      disabled={true}
      onChange={[Function]}
      type="checkbox"
    />
    <i
      className="css-umqk88"
      color="default"
    />
  </label>
  <label
    className="css-1tlrdmb"
  >
    <input
      className="css-1rnm75w"
      defaultChecked={false}
      disabled={true}
      onChange={[Function]}
      type="checkbox"
    />
    <i
      className="css-h1wp49"
      color="primary"
    />
  </label>
  <label
    className="css-1tlrdmb"
  >
    <input
      className="css-1rnm75w"
      defaultChecked={false}
      disabled={true}
      onChange={[Function]}
      type="checkbox"
    />
    <i
      className="css-49iodi"
      color="secondary"
    />
  </label>
</div>
`;

exports[`Storyshots Switch.State Uncontrolled 1`] = `
<div
  className="css-jyjmas"
>
  <label
    className="css-1tlrdmb"
  >
    <input
      className="css-1rnm75w"
      defaultChecked={true}
      disabled={false}
      onChange={[Function]}
      type="checkbox"
    />
    <i
      className="css-umqk88"
      color="default"
    />
  </label>
  <label
    className="css-1tlrdmb"
  >
    <input
      className="css-1rnm75w"
      defaultChecked={true}
      disabled={false}
      onChange={[Function]}
      type="checkbox"
    />
    <i
      className="css-h1wp49"
      color="primary"
    />
  </label>
  <label
    className="css-1tlrdmb"
  >
    <input
      className="css-1rnm75w"
      defaultChecked={true}
      disabled={false}
      onChange={[Function]}
      type="checkbox"
    />
    <i
      className="css-49iodi"
      color="secondary"
    />
  </label>
</div>
`;

exports[`Storyshots Tab Live Props 1`] = `
<div
  className="css-14973vb"
>
  <header
    className="css-fi31uf"
    color="default"
  >
    <button
      className="css-1e88twt"
      color="default"
      onClick={[Function]}
    >
      <svg>
        home.svg
      </svg>
      With Icon
    </button>
    <button
      className="css-1brpd6t"
      color="default"
      onClick={[Function]}
    >
      Plain Tab
    </button>
    <i
      className="css-zeehaj"
      color="default"
      style={Object {}}
    />
  </header>
  <section
    className="css-1iofi9g"
    color="default"
    label={
      <React.Fragment>
        <ForwardRef />
        With Icon
      </React.Fragment>
    }
  >
    Change my appearance from 
    <strong>
      "Knobs"
    </strong>
     tab
  </section>
</div>
`;
